new tags and animations added

--- a/_posts/2016-06-09-caldasnovas.html
+++ b/_posts/2016-06-09-caldasnovas.html
@@ -2,6 +2,7 @@
 title: Fortalecendo o Vínculo Conjugal em Caldas Novas, GO
 img: /img/news/news-go.png
 layout: posts
+tag: Palestra
 ---
 
 As águas vão esquentar ainda mais! Em setembro, na cidade de Caldas Novas, GO, nos dias 16 a 18, acontecerá um encontro de casais com o tema FORTALECENDO O VÍNCULO CONJUGAL! O coordenador do evento é o Pr. Gelson e maiores informações podem ser obtidas pelo e-mail: <a href="{{ site.baseurl }}/mailto:prgelson@gmail.com">prgelson@gmail.com</a> ou fone: (67) 8104-7227.
