--- a/_posts/2016-06-10-brasilia.html
+++ b/_posts/2016-06-10-brasilia.html
@@ -2,6 +2,7 @@
 title: Programa de Enriquecimento Matrimonial no DF
 img: /img/news/news-pemdf.png
 layout: posts
+tag: Seminários
 ---
 
 Em outubro a igreja Batista no Cruzeiro Novo/DF realizará na cidade de Araxá/MG seu 13º encontro de casais, nos dias 07 a 09 e os preletores serão o casal Carlos “Catito” e Dagmar Grzybowski, que estarão ministrando temas do PEM – Programa de Enriquecimento Matrimonial. A coordenação está com o Pr. Mota - Contatos: <a href="{{ site.baseurl }}/mailto:jopmfi@gmail.com">jopmfi@gmail.com</a> /<a href="{{ site.baseurl }}/mailto:josemf@tcu.gov.br"> josemf@tcu.gov.br</a> – fone: (61) 99624794.
