--- a/_posts/2016-06-10-curitiba.html
+++ b/_posts/2016-06-10-curitiba.html
@@ -2,6 +2,7 @@
 title: PEM em Curitiba, PR
 img: /img/news/news-pr.png
 layout: posts
+tag: Seminários
 ---
 
 Dia 22/10 venha PASSAR O DIA com um grupo de casais da IECLB – Comunidade do Redentor de Curitiba/PR. No encontro serão tratados temas do PEM – Programa de Enriquecimento Matrimonial e para maiores informações contatar com Pr. Valdir: <a href="{{ site.baseurl }}/mailto:valdir.steuernagel@gmail.com">valdir.steuernagel@gmail.com.</a>
