--- a/_posts/2017-07-19-livro.html
+++ b/_posts/2017-07-19-livro.html
@@ -2,6 +2,7 @@
 title: "LANÇAMENTO: Acontece nas Melhores Famílias"
 img: /img/news/livro.jpg
 layout: posts
+tag: Lançamentos
 ---
 
 LANÇAMENTO: acaba de ser lançado pela Editora Ultimato o livro ACONTECE NAS MELHORES FAMÍLIAS, de autoria de Dr. Carlos “Catito” e Dr. Jorge Maldonado. O livro é uma análise sistêmica da dinâmica familiar de sete famílias descritas na Bíblia e mostra como, apesar de suas limitações e imperfeições, estas famílias puderam ser usadas por Deus na história. Adquira seu exemplar diretamente no site da <a href="{{ site.baseurl }}/http://www.ultimato.com.br/loja/produtos/acontece-nas-melhores-familias">editora Ultimato</a>.
