--- a/_posts/2017-07-20-rondonia.html
+++ b/_posts/2017-07-20-rondonia.html
@@ -2,6 +2,7 @@
 title: Pós-graduação em Terapia Familiar Sistêmica em Rondônia</title>
 img: /img/news/news-ro.png
 layout: posts
+tag: Cursos
 ---
 
 Alô Rondônia!!! Em breve estaremos chegando por aí com uma nova turma de Pós-graduação em Terapia Familiar Sistêmica. O curso acontecerá na cidade de Cacoal e para saber mais detalhes escreva para <a href="mailto:eirene@eirene.com.br">eirene@eirene.com.br</a>
