--- a/_posts/2017-07-20-santos.html
+++ b/_posts/2017-07-20-santos.html
@@ -2,6 +2,7 @@
 title: Pós-graduação em Aconselhamento Pastoral Familiar em Santos
 img: /img/news/news-sp.png
 layout: posts
+tag: Cursos
 ---
 
 Santos já tem o maior porto do Brasil, já teve o maior jogador de futebol do mundo em seu principal clube e agora terá uma turma de Pós-graduação em Aconselhamento Pastoral Familiar! As inscrições estão abertas e você que é da baixada santista ou mesmo da região de São Paulo e ABC e quer aprofundar seus conhecimentos na área de família, não deixe a oportunidade passar. O início está previsto para setembro e mais informações podem ser obtidas no site da <a href="http://www.flt.edu.br/curso/8/aconselhamento-pastoral-familiar">FLT</a> ou pelo <a href="https://www.facebook.com/events/1868980816685855/?">Facebook</a>
