--- a/_posts/2017-07-20-sapiranga.html
+++ b/_posts/2017-07-20-sapiranga.html
@@ -2,6 +2,7 @@
 title: Pós-graduação em Aconselhamento Pastoral Familiar em Sapiranga, RS
 img: img/news/news-rs.png
 layout: posts
+tag: Cursos
 ---
 
 Sapiranga/RS vai receber uma turma de Pós-graduação em Aconselhamento Pastoral Familiar. Todo o vale dos Sinos (São Leopoldo, Novo Hamburgo, Campo Bom, Canoas, Esteio, Estancia Velha e Sapucaia do Sul) e até mesmo Porto Alegre e outras cidades próximas serão contemplados com esse excelente curso, ministrado por uma equipe de professores altamente qualificados. O início está previsto para final de julho/ início de agosto (dependendo da formação de turma) e se você quer aprofundar seus conhecimentos na área de família essa é uma ótima oportunidade!
