--- a/_artigos/index.html
+++ b/_artigos/index.html
@@ -6,16 +6,23 @@ meta:
 ---
 
 
-<div class="copy"><h2>Segue abaixo a lista dos artigos publicados pelos nossos professores</h2>
-  
-  {% for artigos in site.artigos %}
-    {% if artigos.layout == 'texto' %}
-    <h3>{{ artigos.title }}</h3>
-    <p>Por {{ artigos.autor }}</p>
-  
-    <a href="{{ site.baseurl }}/{{ artigos.url }}">Quero ler mais…</a>
-    <hr>
-    {% endif %}
-  {% endfor %}
+<div class="box">
+
+  <div class="box--full">
+
+    <h2>Segue abaixo a lista dos artigos publicados pelos nossos professores</h2>
+    
+    <box--card>
+      {% for artigos in site.artigos %}
+        {% if artigos.layout == 'texto' %}
+        <h3>{{ artigos.title }}</h3>
+        <p>Por {{ artigos.autor }}</p>
+      
+        <p class="--more"><a href="{{ site.baseurl }}/{{ artigos.url }}">Quero ler mais…</a>
+        </p>
+        <hr>
+        {% endif %}
+      {% endfor %}</div>
+    </box--card>
 </div>
 
