changed baseurl for url

--- a/_posts/2016-06-10-curitiba.html
+++ b/_posts/2016-06-10-curitiba.html
@@ -5,6 +5,6 @@ layout: posts
 tag: Seminários
 ---
 
-Dia 22/10 venha PASSAR O DIA com um grupo de casais da IECLB – Comunidade do Redentor de Curitiba/PR. No encontro serão tratados temas do PEM – Programa de Enriquecimento Matrimonial e para maiores informações contatar com Pr. Valdir: <a href="{{ site.baseurl }}/mailto:valdir.steuernagel@gmail.com">valdir.steuernagel@gmail.com.</a>
+Dia 22/10 venha PASSAR O DIA com um grupo de casais da IECLB – Comunidade do Redentor de Curitiba/PR. No encontro serão tratados temas do PEM – Programa de Enriquecimento Matrimonial e para maiores informações contatar com Pr. Valdir: <a href="{{ site.url }}/mailto:valdir.steuernagel@gmail.com">valdir.steuernagel@gmail.com.</a>
 
-Saiba mais sobre o PEM <a href="{{ site.baseurl }}/http://eirene.com.br/index.php/programa-de-enriquecimento-matrimonial/">clicando aqui.</a>
+Saiba mais sobre o PEM <a href="{{ site.url }}/http://eirene.com.br/index.php/programa-de-enriquecimento-matrimonial/">clicando aqui.</a>
