--- a/_posts/2017-07-19-livro.html
+++ b/_posts/2017-07-19-livro.html
@@ -5,6 +5,6 @@ layout: posts
 tag: Lançamentos
 ---
 
-LANÇAMENTO: acaba de ser lançado pela Editora Ultimato o livro ACONTECE NAS MELHORES FAMÍLIAS, de autoria de Dr. Carlos “Catito” e Dr. Jorge Maldonado. O livro é uma análise sistêmica da dinâmica familiar de sete famílias descritas na Bíblia e mostra como, apesar de suas limitações e imperfeições, estas famílias puderam ser usadas por Deus na história. Adquira seu exemplar diretamente no site da <a href="{{ site.baseurl }}/http://www.ultimato.com.br/loja/produtos/acontece-nas-melhores-familias">editora Ultimato</a>.
+LANÇAMENTO: acaba de ser lançado pela Editora Ultimato o livro ACONTECE NAS MELHORES FAMÍLIAS, de autoria de Dr. Carlos “Catito” e Dr. Jorge Maldonado. O livro é uma análise sistêmica da dinâmica familiar de sete famílias descritas na Bíblia e mostra como, apesar de suas limitações e imperfeições, estas famílias puderam ser usadas por Deus na história. Adquira seu exemplar diretamente no site da <a href="{{ site.url }}/http://www.ultimato.com.br/loja/produtos/acontece-nas-melhores-familias">editora Ultimato</a>.
 
-(PS.: se deseja levar o autor para dar conferências sobre o conteúdo do livro escreva para <a href="{{ site.baseurl }}/mailto:eirene@eirene.com.br">eirene@eirene.com.br</a> que entraremos em contato).
+(PS.: se deseja levar o autor para dar conferências sobre o conteúdo do livro escreva para <a href="{{ site.url }}/mailto:eirene@eirene.com.br">eirene@eirene.com.br</a> que entraremos em contato).
