--- a/_seminarios/index.html
+++ b/_seminarios/index.html
@@ -30,15 +30,15 @@ meta: |
     <div class="box">
       <div class="box--card --shadow --rullerOnTop box--anim">
         <div class="box--cardImg">
-          <a href="{{ site.baseurl }}/{{ seminarios.url }}"><img src="{{ seminarios.img }}" alt="">
+          <a href="{{ site.url }}/{{ seminarios.url }}"><img src="{{ seminarios.img }}" alt="">
         </div>
         <div class="box--cardText">
-          <h4><a href="{{ site.baseurl }}/{{ seminarios.url }}">{{ seminarios.title }}</a></h4>
+          <h4><a href="{{ site.url }}/{{ seminarios.url }}">{{ seminarios.title }}</a></h4>
           </a>
           <p>{{ seminarios.meta }}</p>
               
           <p>
-            <a class="button--dark" href="{{ site.baseurl }}/{{ seminarios.url }}">Quero saber mais…</a>
+            <a class="button--dark" href="{{ site.url }}/{{ seminarios.url }}">Quero saber mais…</a>
           </p>
         </div>
       </div>
