--- a/_artigos/index.html
+++ b/_artigos/index.html
@@ -17,7 +17,7 @@ meta:
         {% if artigos.layout == 'texto' %}
         <h3>{{ artigos.title }}</h3>
         <p>Por {{ artigos.autor }}</p>
-        <p><em>{{ artigos.excerpt }}</em> <span class="--more"><a href="{{ site.baseurl }}/{{ artigos.url }}">Quero ler mais…</a>
+        <p><em>{{ artigos.excerpt }}</em> <span class="--more"><a href="{{ site.url }}/{{ artigos.url }}">Quero ler mais…</a>
         </span></p>
         <hr>
         {% endif %}
