--- a/_posts/2016-06-10-df.html
+++ b/_posts/2016-06-10-df.html
@@ -5,6 +5,6 @@ layout: posts
 tag: Seminários
 ---
 
-Em outubro a igreja Batista no Cruzeiro Novo/DF realizará na cidade de Araxá/MG seu 13º encontro de casais, nos dias 07 a 09 e os preletores serão o casal Carlos “Catito” e Dagmar Grzybowski, que estarão ministrando temas do PEM – Programa de Enriquecimento Matrimonial. A coordenação está com o Pr. Mota - Contatos: <a href="{{ site.baseurl }}/mailto:jopmfi@gmail.com">jopmfi@gmail.com</a> /<a href="{{ site.baseurl }}/mailto:josemf@tcu.gov.br"> josemf@tcu.gov.br</a> – fone: (61) 99624794.
+Em outubro a igreja Batista no Cruzeiro Novo/DF realizará na cidade de Araxá/MG seu 13º encontro de casais, nos dias 07 a 09 e os preletores serão o casal Carlos “Catito” e Dagmar Grzybowski, que estarão ministrando temas do PEM – Programa de Enriquecimento Matrimonial. A coordenação está com o Pr. Mota - Contatos: <a href="{{ site.url }}/mailto:jopmfi@gmail.com">jopmfi@gmail.com</a> /<a href="{{ site.url }}/mailto:josemf@tcu.gov.br"> josemf@tcu.gov.br</a> – fone: (61) 99624794.
 
-Saiba mais sobre o PEM <a href="{{ site.baseurl }}/http://eirene.com.br/index.php/programa-de-enriquecimento-matrimonial/">clicando aqui.</a>
+Saiba mais sobre o PEM <a href="{{ site.url }}/http://eirene.com.br/index.php/programa-de-enriquecimento-matrimonial/">clicando aqui.</a>
