--- a/_posts/2016-06-10-fortaleza.html
+++ b/_posts/2016-06-10-fortaleza.html
@@ -5,6 +5,6 @@ layout: posts
 tag: Seminários
 ---
 
-Essa é a proposta da Igreja Presbiteriana Nova Jerusalém de Fortaleza. Por isso estará promovendo um encontro do PEM – Programa de Enriquecimento Matrimonial. A organização está a encargo do Pr. Gabriel: (85) 99653.9922; e-mail: <a href="{{ site.baseurl }}/mailto:gabrielbrasils@gmail.com">gabrielbrasils@gmail.com</a>. Os preletores serão o casal Carlos “Catito” e Dagmar Grzybowski.
+Essa é a proposta da Igreja Presbiteriana Nova Jerusalém de Fortaleza. Por isso estará promovendo um encontro do PEM – Programa de Enriquecimento Matrimonial. A organização está a encargo do Pr. Gabriel: (85) 99653.9922; e-mail: <a href="{{ site.url }}/mailto:gabrielbrasils@gmail.com">gabrielbrasils@gmail.com</a>. Os preletores serão o casal Carlos “Catito” e Dagmar Grzybowski.
 
-Saiba mais sobre o PEM <a href="{{ site.baseurl }}/http://eirene.com.br/index.php/programa-de-enriquecimento-matrimonial/">clicando aqui.</a>
+Saiba mais sobre o PEM <a href="{{ site.url }}/http://eirene.com.br/index.php/programa-de-enriquecimento-matrimonial/">clicando aqui.</a>
