--- a/_cursos/index.html
+++ b/_cursos/index.html
@@ -25,7 +25,7 @@ meta: |
 
 {% for cursos in site.cursos %}
   
-  {% if cursos.layout == 'inscreva' %}
+  {% if cursos.layout == "inscreva" %}
   <div class="box">
     <div class="box--card --shadow --rullerOnTop box--anim">
       <div class="box--cardImg">
