--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ type: index
     {% endif %}
   {% endfor%}
     
-    <div class="divider">
+    <div id="agenda" class="divider">
       <h3>O que estamos fazendo</h3>
 
       <div class="box --hidden --anchor">
